--- a/IhalematikPro/Forms/IhaleAdim/frm_TopluObfYukleIhale.resx
+++ b/IhalematikPro/Forms/IhaleAdim/frm_TopluObfYukleIhale.resx
@@ -5567,6 +5567,7 @@ A1  Sütunu :ÖBF No
 B1  Sütunu: Malzeme Cinsi Açıklama
 C1  Sütunu :Birimi
 D1  Sütunu :Miktarı
+E1  Sütunu :Birim Fiyatı
 şeklinde olmalıdır.</value>
   </data>
   <data name="picture1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -13632,4 +13633,7 @@ D1  Sütunu :Miktarı
         AAAIBAD/BQQAIfkEBAMAAAAsAAAAAAEAAQAACAQA/wUEADs=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
