--- a/IhalematikPro/Forms/Poz/frm_TopluPozYukle.resx
+++ b/IhalematikPro/Forms/Poz/frm_TopluPozYukle.resx
@@ -13632,4 +13632,7 @@ D1  Sütunu : Birim Fiyatı
         X9ttAMYAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
