--- a/IhalematikPro/Forms/Taseron/frm_IsMalzemeEkle.resx
+++ b/IhalematikPro/Forms/Taseron/frm_IsMalzemeEkle.resx
@@ -120,4 +120,70 @@
   <metadata name="popupMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="colIsSelected.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAAXdEVYdFRpdGxlAFNlbGVjdEFsbDtTZWxlY3Q7nRGi
+        QQAAAmlJREFUOE+FkstPU0EUxg9iC4Q/w41EAtGIrcXSlgYp4C2X0rcoBgOigiDlIUUFaUsfUKS8fG1w
+        ZUJcSIWCCurGhYlGdhqNxjQhLtQYiboy+ZwZrDHQhC/55cw5d+Y7ZyaXZHcXZHc3ql1dqHZ2kdnVydad
+        MDsZDg9JDg8kR4eAiTZDfOPmYjqqbO0sbK2TZD/PIihyfQWRa8uC8PQKQtPL/yAmk6VVxC2qtLYJp9DU
+        IwpObjA08VDAtIOhYGTyJK3Ka1rEBIHxB/DHNvDFluAbW+IdM90nvSg22H18zcgoNjpJU+oQHDTYicrM
+        p4XB4NgiDV5dpCuc0QQNRBPcX+Fq6EXs5h2o9LV+lu/kJh8/fye1zsawEpUeaRIG/dEE+kcWGPO4PDyP
+        SwxuYD/Rg0/rvxAen0GRtibAa9xEXVJLKq2FSFfRIN7gYuQ+9YX/EoqTNxxn+0hpO96NtW8/8PJ1Er6R
+        W9ivkYZ4nZsUHZKJtIfrxQTeYBy9wTn0Ds3hguAenyDLWudB8us6nr16j4Wnq/D6p7BXXRlMmZDGWCcM
+        0sGUbTnagbdrXxB/vIrZxHNBz0AMhUWmEG/AXtINNUfvgsrgIhWPeicO6JzcIVt2tuHFmyTavVFEpmYh
+        2Vsh2VogWVtgkpsCaTunYMoxO86hzz+B/H3GD5MzcdjqO3/nFWjy2bdchiLtwRTcQLKdRV6BbnTXbpXj
+        jCcIb+AGjFX1w+ybssLSTGkPpuAd9hQa+F1zGLkmufHd7btPYKpuTPKaST61rUEGQ/yBDEVJmauZ3ftn
+        acWxKMuV5XLjtgb/S5gw+DRZGznRH5dr3IE23W5UAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="gridColumn10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAABx0RVh0VGl0
+        bGUAUGFja2FnZTtQcm9kdWN0O0dyb3VwO56BdyIAAAKNSURBVDhPbdJbSJNhHMdxW3ksB96owwq88CLC
+        c5makRVdFIWRBUF56KAU5UxEkKaoWwOxC4nE7GhNJckjnoihzrk50QZOKJenlheCbq65Tedym7+eZ019
+        l77w4X3h+T9fHnheDwBuOBwOxRouP1+mqb8OTd01aESp0HxMxeyHq5h4k8In63vpHJ3fLcAaEp7j/xSl
+        wNh3y+Xmlun3l9BffEpA57YCjGdPQECA12zHU9isv2Bb08C+PgeHdRYOyzfYzSOwm4ahrLwMEvD8P8CS
+        8qLLZl6fxcyrM5iuScb0y2RMVp/GfBcXq+paWMYrYDOIIS1KpAEvZoAlKYzkT9UkwdBz0eUClgn6Vlcl
+        QPkiFXPdJZhqyUVPbgwNeDMD+5TCeGxYVdhYG8PGHxUcqyNwmBXkyDLYjVIoBInQDgpgUD1Hb+EJGvBh
+        BjxHBXFkkxwmeTaRBfMmWRZs+k6IuWHQK4RYm6yCuOAYDfgyA17td0OhbnoE1bOofyq23xP1GWjNOIgl
+        GR+r4+UQ58fuDChKYmH88Q7zdYk76L8K0f0gFLrBUphHefiSF00DfsyA91BxDNbnG6FvSnI5iaXPSU6W
+        7+XozD6MRUkRjINc9DyOooH9zICP7EkkrJq3WGpMgI76tCkeK0oeOu4dwkIfD8vi2+jmRuwI+EoLw2FR
+        V0LXEAdtw3EnnYtJnoP2OyGQV+egKycczffDB0jA7Rb8JAVHsTJWCq0oBouEVhS9xdCbjtZMDthsdjDZ
+        6E83E26/sl9//hGYFHlYqI3EYm2Em98dV9CSHkQHncdm2gx4dz4Mk7RlhpDr4ji1pBNpwWhOCyICUXcj
+        cIDMOY+9W4BFF4kDhD8D24V+03XnsbfB4y9OVFTmfCjeFwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnGuncelle.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAmBJREFUOE9j
+        wAeYGBkZfMXF+R+5uV164uFxqFZdXYWTCSRKBACp0tRQZzqfmbHsoYvL38dubn+fuLt/2GltnazJw0PY
+        EGagRZt7g6PePLj898msmf8eenj8e+Tq+u8J0KA7rq5rTQQEWKFKMQET0Pg0d3Hxj4s1nr1caPjvxdml
+        /1+ePPH/cWLif6Br/j10df0cICkpCFWOCkBuU5dmZ3wxV3PDmzmKf59Nk/73YKL4/4frU/6/unf13/MJ
+        /X93WFsXcDEzY/cFOysj4/5m5ZS3c5X+Pp8u/e/pVMn/DyaI/H8GZN+fbfTv3un1p+2trTiw6gY5vSpY
+        VOXdfJUPIM0vZkj/fzRJ7P+TKRL/n02T+nevX+xtrjuvPDAioDqQAMjpZiocLK/nqh5+MUP238uZsv+A
+        hvx/PFn8P4j9aJL431W5fDGszAzYnc7Lych4ukO++uUsObDT38xR+A9y/qtZcv+eTZf6e7lDZIWCCI40
+        ABJuyrA1eDVH6dvTqVL/3s9XAmkEawbhR5MlHkVacghjczkYMAMjfd/ePfWfbm39+36F+b/3C1T+v54t
+        ///dPEWQN37PSRNwZ2aCKsYGWFhYGG/dujn354/v/769e/z/w86U/x8Wqv17NVvh7/kO8UlifASSLxsb
+        G+OnT592/vjx49+3b1//ff708d/7Cwv/PpujdcVdn4MLv24g4OTkZKqsrLx+8eLFf1++fPn37t3bPxcu
+        nF+dEOmnhNPfyABkgLa29icjI6M/S5cu3VZaWmoqKirKiDW+sQFeXl4xdXX1/RISEvYg7wABVIYQYGAA
+        AGM9D5EWrewqAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnSil.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAklJREFUOE9j
+        gIGnlnL2j/zNpz6wU559UZZJHipMHHhkIBzzu7fi/7/53f/f1+X8vybL+OK8HLMSVJow+GglKfS9PP7F
+        37rU/3+7iv+/zov6f1WW8doZOWZ+qBKGS6pcfEBcdFmFs/KSCmfDeXkWMagUBHxwUDT+Xhz94W9Z9P+/
+        3SX/n0U4/r8sy7T5jiwD4yMTcdV7Xoa7Pk1qevh93YL/94Ost5+RZ8X05hdnZb0fxdHP/uQH///dVfL/
+        kZPm/2fRLmfeFsX8+T2p7v+Xaa0XHxUnukCVYwfvbOVkP8S7X/2T7f//d1vB/z9Vif9/TKz7fz/Msf+C
+        HDMzVBl+8DnQpOh3tM3/P66K/39VxP+/qcH76aIcEzw88IJPAcYFvyMt///1VPv/M9n9/58ws/+PvY3/
+        A6O2E6oEN/jooRX2K87h/18H6f9fYxz+31LjPv8zzuHH16Ko/zdkGb8Do1YSqhQTAKOS/1us49vfNhL/
+        /wQa/n9oIvn/nByzwbsI+/Y/4eb/nwbbgGJlIlQ5JnhsJVf7O8b2/29Huf+fwm3/X5Zj2goSf2oiwQt0
+        zYvPOSH/r8syfr4kx8QD1oAOnlrJ1v9pyPz/qzTm/x1tgU/ARKQDlWJ4F2qd8bsg7P8DS4X/F2SZ4qHC
+        qOCztRTXh2TvFQ8c1ZcDNWtBhcEA6AqWrylet19nhvy/LM+8H5gijaBSxIOPfoZRX7or/1+VY/oMNGAS
+        VJh4AIwZxm/1WZduKLD+v6jCOR8qTBr44KRseEmZwwHKBQIGBgB+kP6nihseKgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
